--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,30 +1,32 @@
-api:
-  api_key: ''
-  enabled: false
-  endpoint: ''
-  send_interval: 60
-  timeout: 30
-data_storage:
-  enabled: true
-  format: json
-  output_directory: data/counts
-  save_interval: 300
+# Vehicle Detection System - Default Configuration
+
+# Detection settings
 detection:
+  model_path: "models/yolov5n-416.xml"
+  device: "CPU"  # CPU or GPU
+  input_shape: [416, 416]
   conf_threshold: 0.25
-  device: CPU
-  frame_skip: 1
-  input_shape: !!python/tuple
-  - 416
-  - 416
-  model_path: models/yolov5n-416.xml
   nms_threshold: 0.5
-tracker:
-  iou_threshold: 0.3
-  max_age: 1
-  min_hits: 3
-  trail_length: 30
+  frame_skip: 2
+
+# UI settings
 ui:
-  default_height: 800
-  default_width: 1200
-  theme: light
-  window_title: Vehicle Detection System
+  window_width: 1200
+  window_height: 800
+  theme: "dark"
+  auto_save: true
+
+# Storage settings
+storage:
+  enabled: true
+  save_interval: 300  # seconds
+  output_dir: "data/counts"
+  format: "json"  # json, csv, both
+
+# Advanced settings
+advanced:
+  max_fps: 30
+  buffer_size: 1
+  log_level: "INFO"
+  enable_tracking: true
+  trail_length: 30
