--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,20 @@
-# Core dependencies
-opencv-python>=4.5.0
+# Vehicle Detection System - Core Dependencies
+
+# Core computer vision and ML
+opencv-python>=4.6.0
 numpy>=1.21.0
-openvino>=2022.1.0
-
-# Configuration management
 PyYAML>=6.0
-dataclasses; python_version<"3.7"
 
-# Data handling and API
-requests>=2.25.0
-pandas>=1.3.0
-
-# GUI dependencies - PySide6
+# GUI framework (optional but recommended)
 PySide6>=6.4.0
 
-# Development dependencies (optional)
-# Install with: pip install -e .[dev]
-pytest>=6.0.0
-black>=21.0.0
-flake8>=3.9.0
-mypy>=0.910
+# OpenVINO for inference (optional - fallback to mock if not available)
+openvino>=2022.3.0
+
+# Data handling
+pandas>=1.3.0
+requests>=2.25.0
+
+# Utilities
+Pillow>=8.3.0
+matplotlib>=3.5.0
